# cs184-Final-Project

./: .clang-format  CMakeLists.txt  README.md
Websites/final/: index.qmd
docs/: milestone.qmd
include/: shader.hpp  texture.hpp  wormhole.hpp
include/detail/: globject.hpp
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
resources/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.cpp  simulate.hpp  texture.cpp
